Added name parameter to Keystore element

--- a/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
+++ b/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
@@ -3,6 +3,8 @@ certificate-tracker.keystore.aliases=Keystores aliases to track
 certificate-tracker.add=Operation Adds tracker subsystem
 certificate-tracker.remove=Operation Removes tracker subsystem
 certificate-tracker.keystore=Managed keystore
+certificate-tracker.keystore.path=Keystore path
+certificate-tracker.keystore.name=Name of keystore
 certificate-tracker.keystore.add=Operation Adds tracker subsystem
 certificate-tracker.keystore.remove=Operation Removes tracker subsystem
 certificate-tracker.keystore.password=Passworrd attribute
