Added support for PKI Client truststore configuration

--- a/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
+++ b/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
@@ -13,3 +13,4 @@ certificate-tracker.pki-client=PKI-Client
 certificate-tracker.pki-client.add=Operation Adds PKI Client
 certificate-tracker.pki-client.remove=Operation Removes PKI Client
 certificate-tracker.pki-client.time-interval=Time interval attribute 
+certificate-tracker.pki-client.truststore-name=Truststore name that corresponds with defined keystore
