Added option for custom PKIClient implementation

--- a/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
+++ b/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
@@ -1,4 +1,6 @@
 certificate-tracker=Acme Tracker subsystem
+certificate-tracker.pki-client.code=PKIClient code attribute
+certificate-tracker.pki-client.module=PKIClient module attribute
 certificate-tracker.keystore.aliases=Keystores aliases to track
 certificate-tracker.add=Operation Adds tracker subsystem
 certificate-tracker.remove=Operation Removes tracker subsystem
