Modified pki-client element TestCase

--- a/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
+++ b/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
@@ -1,4 +1,5 @@
 certificate-tracker=Acme Tracker subsystem
+certificate-tracker.pki-client.url=URL attribute for PKI client
 certificate-tracker.pki-client.code=PKIClient code attribute
 certificate-tracker.pki-client.module=PKIClient module attribute
 certificate-tracker.keystore.aliases=Keystores aliases to track
