Fix actual schema with descriptions

--- a/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
+++ b/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
@@ -1,19 +1,19 @@
-certificate-tracker=Acme Tracker subsystem
-certificate-tracker.pki-client.url=URL attribute for PKI client
-certificate-tracker.pki-client.code=PKIClient code attribute
-certificate-tracker.pki-client.module=PKIClient module attribute
-certificate-tracker.keystore.aliases=Keystores aliases to track
-certificate-tracker.add=Operation Adds tracker subsystem
-certificate-tracker.remove=Operation Removes tracker subsystem
+certificate-tracker=The configuration of certificate-tracker subsystem
+certificate-tracker.add=Adds the certficate-tracker subsystem
+certificate-tracker.remove=Removes the certificate-tracker subsystem
 certificate-tracker.keystore=Managed keystore
-certificate-tracker.keystore.path=Keystore path
-certificate-tracker.keystore.name=Name of keystore
-certificate-tracker.keystore.add=Operation Adds tracker subsystem
-certificate-tracker.keystore.remove=Operation Removes tracker subsystem
-certificate-tracker.keystore.password=Passworrd attribute
-certificate-tracker.keystore.type=Type of keystore attribute
-certificate-tracker.pki-client=PKI-Client
-certificate-tracker.pki-client.add=Operation Adds PKI Client
-certificate-tracker.pki-client.remove=Operation Removes PKI Client
-certificate-tracker.pki-client.time-interval=Time interval attribute 
-certificate-tracker.pki-client.truststore-name=Truststore name that corresponds with defined keystore
+certificate-tracker.keystore.add=Adds managed keystore
+certificate-tracker.keystore.remove=Removes managed keystore
+certificate-tracker.keystore.name=The keystore name
+certificate-tracker.keystore.path=The keystores path
+certificate-tracker.keystore.password=The keystores password
+certificate-tracker.keystore.type=Type of the keystore
+certificate-tracker.keystore.aliases=List of keystores aliases to track
+certificate-tracker.pki-client=PKI Client
+certificate-tracker.pki-client.add=Adds PKI Client
+certificate-tracker.pki-client.remove=Removes PKI Client
+certificate-tracker.pki-client.name=Class name of the PKI Client implementation
+certificate-tracker.pki-client.url=URL address of certificate system for PKI Client
+certificate-tracker.pki-client.time-interval=Time interval for checking certificates by PKI Client
+certificate-tracker.pki-client.truststore-name=Name of keystore which is used as a truststore for PKI Client
+certificate-tracker.pki-client.module=Name of JBoss Module where the PKI Client implemetation is located
