--- a/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
+++ b/src/main/resources/org/jboss/certificate/tracker/extension/LocalDescriptions.properties
@@ -13,7 +13,6 @@ certificate-tracker.pki-client=PKI Client
 certificate-tracker.pki-client.add=Adds PKI Client
 certificate-tracker.pki-client.remove=Removes PKI Client
 certificate-tracker.pki-client.name=Class name of the PKI Client implementation
-certificate-tracker.pki-client.url=URL address of certificate system for PKI Client
 certificate-tracker.pki-client.time-interval=Time interval for checking certificates by PKI Client
-certificate-tracker.pki-client.truststore-name=Name of keystore which is used as a truststore for PKI Client
 certificate-tracker.pki-client.module=Name of JBoss Module where the PKI Client implemetation is located
+certificate-tracker.pki-client.client-options=List of client options containing a name/value pair
