--- a/pom.xml
+++ b/pom.xml
@@ -1,37 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ JBoss, Home of Professional Open Source.
-  ~ Copyright 2010, Red Hat, Inc., and individual contributors
-  ~ as indicated by the @author tags. See the copyright.txt file in the
-  ~ distribution for a full listing of individual contributors.
-  ~
-  ~ This is free software; you can redistribute it and/or modify it
-  ~ under the terms of the GNU Lesser General Public License as
-  ~ published by the Free Software Foundation; either version 2.1 of
-  ~ the License, or (at your option) any later version.
-  ~
-  ~ This software is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-  ~ Lesser General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU Lesser General Public
-  ~ License along with this software; if not, write to the Free
-  ~ Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
-  ~ 02110-1301 USA, or see the FSF site: http://www.fsf.org.
-  --><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+   Copyright 2014 Filip Bogyai
+ 
+   This file is part of certificate-tracker.
+ 
+   Certificate-tracker is free software: you can redistribute it and/or modify
+   it under the terms of the GNU Lesser General Public License as published by
+   the Free Software Foundation, either version 3 of the License, or
+   (at your option) any later version.
+  
+   This software is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU Lesser General Public License for more details.
+  
+   You should have received a copy of the GNU Lesser General Public License
+   along with this software.  If not, see <http://www.gnu.org/licenses/>.   
+-->
+  <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <!-- parent>
-        <groupId>org.jboss.as</groupId>
-        <artifactId>jboss-as-parent</artifactId>
-    </parent -->
 
     <groupId>org.jboss.certificate-tracker</groupId>
     <artifactId>certificate-tracker</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <name>JBoss Application Server: Subsystem Artifact</name>
+    <name> Certificate-Tracker Extension for WildFly </name>
 
     <packaging>jar</packaging>
     
@@ -51,8 +44,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                     <!-- Optional if you wan to generate skeleton translation properties files --> 
                     <compilerArgument>  
                         -AgeneratedTranslationFilesPath=${project.basedir}/target/generated-translation-files  
@@ -175,37 +168,35 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency> 
-    
-			<dependency>
-				<groupId>org.jboss.resteasy</groupId>
-				<artifactId>resteasy-client</artifactId>
-				<version>3.0.6.Final</version>
-			</dependency>            
+    		
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
+            <version>3.0.6.Final</version>
+        </dependency>            
 				
-			<dependency>
-				<groupId>org.jboss.resteasy</groupId>
-				<artifactId>resteasy-jaxrs</artifactId>
-				<version>3.0.6.Final</version>
-			</dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxrs</artifactId>
+            <version>3.0.6.Final</version>
+        </dependency>
 		     
-		     <dependency>
-				<groupId>org.jboss.resteasy</groupId>
-				<artifactId>resteasy-jaxb-provider</artifactId>
-				<version>3.0.6.Final</version>
-			</dependency>       
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jaxb-provider</artifactId>
+            <version>3.0.6.Final</version>
+        </dependency>       
 		      
-			<dependency>
-				<groupId>org.jboss.resteasy</groupId>
-				<artifactId>resteasy-atom-provider</artifactId>
-				<version>3.0.6.Final</version>
-			</dependency> 
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-atom-provider</artifactId>
+            <version>3.0.6.Final</version>
+        </dependency> 
 			 
-			<dependency>  
-				<groupId>org.jboss.logging</groupId>  
-				<artifactId>jboss-logging-processor</artifactId>  
-				<version>1.2.0.Final</version>         		
-			</dependency>          
-    </dependencies>     
-   	
-    
+        <dependency>  
+            <groupId>org.jboss.logging</groupId>  
+            <artifactId>jboss-logging-processor</artifactId>  
+            <version>1.2.0.Final</version>         		
+        </dependency>          
+    </dependencies>  
 </project>
